--- a/MegaBox/index.html
+++ b/MegaBox/index.html
@@ -696,9 +696,34 @@
         </div>
     </section>
     <!-- //event -->
+    <section id="opening">
+        <div class="container">
+            <div class="row">
+                <div class="opening">
+                    <h2><span class="grand icon ir_pm">Grand Opening</span></h2>
+                    <strong class="date icon ir_pm">2021.01 ~ 2021.03</strong>
+                    <p class="desc">LIFE THEATER로 새롭게 시작하는 메가박스를 만나보세요!</p>
+                    <div class="open_box">
+                        <div>
+                            <h3>리뉴얼 오픈</h3>
+                            <p><em>경기도</em><strong>기흥역AK몰점</strong>1월 8일</p>
+                        </div>
+                        <div>
+                            <h3>리뉴얼 오픈</h3>
+                            <p><em>경기도</em><strong>판교점</strong>1월 27일</p>
+                        </div>
+                        <div>
+                            <h3>리뉴얼 오픈</h3>
+                            <p><em>경기도</em><strong>수지상현역점</strong>1월 29일</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- //opening -->
     <main>
         <section id="contents">
-            <div class="opening"></div>
             <div class="new"></div>
             <div>
                 <div></div>
