--- a/MegaBox/index.html
+++ b/MegaBox/index.html
@@ -736,11 +736,72 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="new_right"></div>
+                    <div class="new_right">
+                        <h3 class="title">프리키 데스데이</h3>
+                        <span class="release">2020년 11월 25일 개봉</span>
+                        <div class="star">
+                            <span class="icon star1"></span>
+                            <span class="icon star1"></span>
+                            <span class="icon star1"></span>
+                            <span class="icon star2"></span>
+                            <span class="icon star0"></span>
+                            <strong>7.5/10</strong>
+                        </div>
+                        <ul class="summary">
+                            <li class="genre"><span class="bar">코미디,호러</span> <span>미국</span></li>
+                            <li class="age"><span class="bar">102분</span> <span>청소년 관람불가</em></li>
+                            <li class="desc">평범 이하, 존재감 제로 고등학생 밀리(캐서린 뉴트)가 우연한 사고로 중년의 싸이코 연쇄 살인마와 몸이 바뀌게 되고, 24시간 안에 신체를 찾아야만 한다는 사실을 알게되면서 벌어지는 예측불가 호러테이닝 영화</li>
+                        </ul>
+                        <div class="select">
+                            <div class="s1">
+                                <label for="udate" class="ir_so">날짜</label>
+                                <input type="text" id="udate" name="udate" value="2019년 1월 25일" class="ui_select2">
+                            </div>
+                            <div class="s2">
+                                <label for="utime" class="ir_so">시간</label>
+                                <select id="utime" name="utime" class="ui_select2">
+                                    <option value="오전 0:00">오전 0:00</option>
+                                    <option value="오전 1:00">오전 1:00</option>
+                                    <option value="오전 2:00">오전 2:00</option>
+                                    <option value="오전 3:00">오전 3:00</option>
+                                    <option value="오전 4:00">오전 4:00</option>
+                                    <option value="오전 5:00">오전 5:00</option>
+                                    <option value="오전 6:00">오전 6:00</option>
+                                    <option value="오전 7:00">오전 7:00</option>
+                                    <option value="오전 8:00">오전 8:00</option>
+                                    <option value="오전 9:00">오전 9:00</option>
+                                    <option value="오전 10:00">오전 10:00</option>
+                                    <option value="오전 11:00">오전 11:00</option>
+                                    <option value="오전 12:00">오전 12:00</option>
+                                    <option value="오후 1:00">오후 1:00</option>
+                                    <option value="오후 2:00">오후 2:00</option>
+                                    <option value="오후 3:00">오후 3:00</option>
+                                    <option value="오후 4:00">오후 4:00</option>
+                                    <option value="오후 5:00">오후 5:00</option>
+                                    <option value="오후 6:00">오후 6:00</option>
+                                    <option value="오후 7:00">오후 7:00</option>
+                                    <option value="오후 8:00">오후 8:00</option>
+                                    <option value="오후 9:00">오후 9:00</option>
+                                    <option value="오후 10:00">오후 10:00</option>
+                                    <option value="오후 11:00">오후 11:00</option>
+                                    <option value="오후 12:00">오후 12:00</option>
+                                </select>
+                            </div>
+                            <div class="s3">
+                                <label for="utext" class="ir_so">주소</label>
+                                <input type="text" id="utext" name="utext" class="ui_input3" placeholder="주소 또는 도로명을 입력해주세요.">
+                            </div>
+                        </div>
+                        <div class="btn">
+                            <a href="#" class="white">좌석확인</a>
+                            <a href="#" class="purple">예매하기</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- //new -->
     <main>
         <section id="contents">
             <div>
