--- a/MegaBox/index.html
+++ b/MegaBox/index.html
@@ -810,58 +810,60 @@
                         <h3>공지사항</h3>
                         <div class="notice">
                             <ul>
-                                <li class="active"><a href="#">전체 공지</a>
+                                <li class="active">
+                                    <a href="#">전체 공지</a>
                                     <ul>
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">공지</strong> <em>2020.11.05</em></dt>
-                                                <dd>수도권 영화 관람 시 상영관 내 음식물 취식 안내</dd>
+                                                <dd><a href="#">수도권 영화 관람 시 상영관 내 음식물 취식 안내</a></dd>
                                             </dl>
                                         </li>
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">무대인사</strong> <em>2020.11.04</em></dt>
-                                                <dd>&lt;도굴&gt; 개봉주 무대인사</dd>
+                                                <dd><a href="#">&lt;도굴&gt; 개봉주 무대인사</a></dd>
                                             </dl>
                                         </li>
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">공지</strong> <em>2020.10.20</em></dt>
-                                                <dd>[공지] 캐릭터 옴팡이 블라인드피규어 제공 방식 및 교환 안내</dd>
+                                                <dd><a href="#">[공지] 캐릭터 옴팡이 블라인드피규어 제공 방식 및 교환 안내</a></dd>
                                             </dl>
                                         </li>
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">무대인사</strong> <em>2020.10.23</em></dt>
-                                                <dd>&lt;삼진그룹 영어토익반&gt; 개봉 2주차 무대인사</dd>
+                                                <dd><a href="#">&lt;삼진그룹 영어토익반&gt; 개봉 2주차 무대인사</a></dd>
                                             </dl>
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="#">영화관 공지</a>
-                                    <ul style="display: none">
+                                <li>
+                                    <a href="#">영화관 공지</a>
+                                    <ul>
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">여수웅천</strong> <em>2020.10.20</em></dt>
-                                                <dd>[여수웅천] 관람요금 변경 안내</dd>
+                                                <dd><a href="#">[여수웅천] 관람요금 변경 안내</a></dd>
                                             </dl>
                                         </li>
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">대구이시아</strong> <em>2020.10.20</em></dt>
-                                                <dd>[대구이시아] 건물 전기 점검에 의한 운영시간 변경 안내</dd>
+                                                <dd><a href="#">[대구이시아] 건물 전기 점검에 의한 운영시간 변경 안내</a></dd>
                                             </dl>
                                         </li>
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">코엑스</strong> <em>2020.10.12</em></dt>
-                                                <dd>[코엑스] &lt;돌멩이&gt; 시사회 진행에 따른 고객 안내</dd>
+                                                <dd><a href="#">[코엑스] &lt;돌멩이&gt; 시사회 진행에 따른 고객 안내</a></dd>
                                             </dl>
                                         </li>
                                         <li>
                                             <dl>
                                                 <dt><strong class="bar">안성스타필드</strong> <em>2020.10.08</em></dt>
-                                                <dd>[안성스타필드] Dolby Cinema관 오픈 안내</dd>
+                                                <dd><a href="#">[안성스타필드] Dolby Cinema관 오픈 안내</a></dd>
                                             </dl>
                                         </li>
                                     </ul>
